--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,8 @@
 = FlexDate
 
-Flexible dates for Ruby. Written by Alex Reisner (alex@alexreisner.com).
+Flexible dates for Ruby.
+
+Written by Alex Reisner (alex@alexreisner.com).
 
 
 == The Problem
@@ -9,7 +11,7 @@ Imagine you are collecting dates of historic events but you don't always have
 exact dates. For example, you might know that an event occurred in March of
 1862 but you don't know the exact day. You could store this as a Ruby Date
 object that looks like '1862-03-01' but, really, you don't want to specify a
-day at all. You want to <tt>explicitly</tt> enter a part of the date as
+day at all. You want to *explicitly* enter a part of the date as
 "unknown".
 
 
@@ -51,7 +53,8 @@ stores birthdays, the columns required would be (all integers):
   birthday_m
   birthday_d
 
-Then, simply put this in your Person model:
+Then, simply put this in your Person model (you can list multiple attributes if
+needed):
 
   multipart_date :birthday
 
@@ -72,29 +75,34 @@ and you'll be able to do things like this:
   p.birthday.to_s(:long)
     => "August 23, 1964"
 
-And, of course, because you're using FlexDate, you can store partial dates,
-so you don't need to know the year to store the month and day of someone's
-birthday.
+But the real advantage is that, because you're using FlexDate, you can store
+partial dates so you don't need to know the year to store the month and day of
+someone's birthday.
 
 I've also written another Rails plugin called Informant which provides a
 full-featured FormBuilder class, and includes a <tt>multipart_date_select</tt>
-field type which is the perfect compliment to MultipartDate in your Rails
+field type which is a good compliment to MultipartDate in your Rails
 application. Install Informant from my Git repository:
 
   script/plugin install git://github.com/alexreisner/informant.git 
 
 
-== The Implementation
+== Code Discussion
 
 You might expect FlexDate to be a subclass of Date, but this is not the case.
-That implementation is far more complicated because the instance methods
+That implementation would be far more complicated because the instance methods
 of Date require certain instance variables to be set, and to meet certain
 requirements for validity. Massaging the Date class to accept an invalid
-date as valid is simply the wrong approach for our modest goal, which is
-simply to duplicate the behavior of the Date class and bolt on support for
-partial dates should you have one. So instead we define a very simple
-class with some (hopefully) useful methods and use method_missing to fall
-back to Date where necessary when a FlexDate is complete (not partial).
+date seems like the wrong approach for the modest goals of FlexDate, which is
+simply to allow storing of partial dates, and duplicate the behavior
+of the Date class <b>when a date is complete</b>.
+
+So instead, FlexDate is a very simple class that inherits from nothing,
+provides some (hopefully) useful methods for partial dates, and uses
+<tt>method_missing</tt> to fall back to Date when a FlexDate object is
+complete (specifies year, month, and day).
+
+Any comments or suggestions regarding this design are welcome.
 
 
 Copyright (c) 2008 Alex Reisner (alex@alexreisner.com), released under the MIT license.
