--- a/README.rdoc
+++ b/README.rdoc
@@ -11,8 +11,7 @@ Imagine you are collecting dates of historic events but you don't always have
 exact dates. For example, you might know that an event occurred in March of
 1862 but you don't know the exact day. You could store this as a Ruby Date
 object that looks like '1862-03-01' but, really, you don't want to specify a
-day at all. You want to *explicitly* enter a part of the date as
-"unknown".
+day at all. You want to <b>explicitly not store</b> the day part of the date.
 
 
 == The Solution
