--- a/README.rdoc
+++ b/README.rdoc
@@ -108,6 +108,7 @@ Any comments or suggestions regarding this design are welcome.
 
 * <tt>MultipartDate::multipart_date</tt> should also generate a setter method. 
 * Fix: <tt>FlexDate#strftime</tt> returns empty string if any part of the format string is not printable. Should print what it can (is this really useful?).
+* Make date arithmetic work (Date minus FlexDate works, but neither FlexDate minus Date or FlexDate minus FlexDate works). 
 
 
 Copyright (c) 2008 Alex Reisner (alex@alexreisner.com), released under the MIT license.
